project/src/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> start
Rule 2     start -> expression_statements
Rule 3     start -> loop_statements
Rule 4     start -> functions_statements
Rule 5     start -> conditional_statements
Rule 6     start -> <empty>
Rule 7     expression_statements -> expression start
Rule 8     loop_statements -> while_loop start
Rule 9     loop_statements -> for_loop start
Rule 10    functions_statements -> function_definition start
Rule 11    functions_statements -> function_call start
Rule 12    conditional_statements -> if_else_statement start
Rule 13    conditional_statements -> if_statement start
Rule 14    if_else_statement -> KEYWORD_IF BR_LCIR if_cond BR_RCIR M_1 compound_statement KEYWORD_ELSE M_2 compound_statement M_3
Rule 15    if_statement -> KEYWORD_IF BR_LCIR if_cond BR_RCIR M_1 compound_statement M_3
Rule 16    while_loop -> KEYWORD_WHILE BR_LCIR M_4 if_cond BR_RCIR M_5 compound_statement M_6
Rule 17    for_loop -> KEYWORD_FOR BR_LCIR IDENTIFIER KEYWORD_IN for_range BR_RCIR M_7 compound_statement M_8
Rule 18    function_definition -> fname OP_FUNC_ASGN KEYWORD_FUNCTION BR_LCIR arg_list M_10 BR_RCIR compound_statement M_11
Rule 19    function_definition -> fname OP_FUNC_ASGN KEYWORD_FUNCTION BR_LCIR BR_RCIR M_12 compound_statement M_13
Rule 20    fname -> IDENTIFIER
Rule 21    arg_list -> IDENTIFIER M_9 SEP_COMMA arg_list
Rule 22    arg_list -> IDENTIFIER M_9
Rule 23    M_9 -> <empty>
Rule 24    M_10 -> <empty>
Rule 25    M_12 -> <empty>
Rule 26    M_11 -> <empty>
Rule 27    M_13 -> <empty>
Rule 28    M_1 -> <empty>
Rule 29    M_2 -> <empty>
Rule 30    M_3 -> <empty>
Rule 31    M_4 -> <empty>
Rule 32    M_5 -> <empty>
Rule 33    M_6 -> <empty>
Rule 34    M_7 -> <empty>
Rule 35    M_8 -> <empty>
Rule 36    function_call -> fname2 BR_LCIR arg_to_pass BR_RCIR M_14
Rule 37    fname2 -> IDENTIFIER
Rule 38    M_14 -> <empty>
Rule 39    arg_to_pass -> arg_to_pass SEP_COMMA arg M_15
Rule 40    arg_to_pass -> arg M_15
Rule 41    arg_to_pass -> <empty>
Rule 42    arg -> rightside
Rule 43    M_15 -> <empty>
Rule 44    compound_statement -> BR_LCUR statement_list BR_RCUR
Rule 45    statement_list -> statement_list statement
Rule 46    statement_list -> statement
Rule 47    statement -> expression
Rule 48    statement -> for_loop
Rule 49    statement -> while_loop
Rule 50    statement -> if_statement
Rule 51    statement -> if_else_statement
Rule 52    if_cond -> TYPE_BOOLEAN
Rule 53    if_cond -> comparison_statement
Rule 54    if_cond -> comparison_statement logop if_cond
Rule 55    if_cond -> comparison_statement bitop if_cond
Rule 56    if_cond -> OP_BITNOT if_cond
Rule 57    comparison_statement -> IDENTIFIER compop any_type
Rule 58    comparison_statement -> IDENTIFIER compop IDENTIFIER
Rule 59    comparison_statement -> any_type compop any_type
Rule 60    comparison_statement -> BR_LCIR if_cond BR_RCIR
Rule 61    logop -> OP_LOGAND
Rule 62    logop -> OP_LOGOR
Rule 63    bitop -> OP_BITAND
Rule 64    bitop -> OP_BITOR
Rule 65    compop -> OP_GREAT
Rule 66    compop -> OP_LESS
Rule 67    compop -> OP_LEEQ
Rule 68    compop -> OP_GREQ
Rule 69    compop -> OP_NOEQ
Rule 70    compop -> OP_COMP
Rule 71    expression -> IDENTIFIER BR_LCSR rightside BR_RCSR OP_ASGN rightside
Rule 72    expression -> IDENTIFIER OP_ASGN rightside
Rule 73    expression -> IDENTIFIER OP_ASGN vector_definition M_16
Rule 74    M_16 -> <empty>
Rule 75    expression -> KEYWORD_PRINT BR_LCIR rightside BR_RCIR
Rule 76    expression -> KEYWORD_RETURN BR_LCIR rightside BR_RCIR
Rule 77    vector_definition -> KEYWORD_VECTOR BR_LCIR SEP_COMMA TYPE_INTEGER BR_RCIR
Rule 78    vector_definition -> KEYWORD_VECTOR_CONSTRUCTOR BR_LCIR vector_elements BR_RCIR
Rule 79    vector_elements -> vector_elements SEP_COMMA TYPE_INTEGER
Rule 80    vector_elements -> TYPE_INTEGER
Rule 81    rightside -> rightside math rightside
Rule 82    rightside -> IDENTIFIER math rightside
Rule 83    rightside -> BR_LCIR rightside BR_RCIR
Rule 84    rightside -> any_type bitop rightside
Rule 85    rightside -> any_type logop rightside
Rule 86    rightside -> IDENTIFIER bitop rightside
Rule 87    rightside -> IDENTIFIER logop rightside
Rule 88    rightside -> IDENTIFIER
Rule 89    rightside -> any_type
Rule 90    rightside -> IDENTIFIER BR_LCSR rightside BR_RCSR
Rule 91    math -> OP_PLUS
Rule 92    math -> OP_MINUS
Rule 93    math -> OP_MULT
Rule 94    math -> OP_DIVIDE
Rule 95    math -> OP_EXPO
Rule 96    math -> OP_REMDR
Rule 97    for_range -> for_range_variables SEP_COLON for_range_variables
Rule 98    for_range_variables -> IDENTIFIER
Rule 99    for_range_variables -> TYPE_INTEGER
Rule 100   any_type -> TYPE_NUMERIC
Rule 101   any_type -> TYPE_INTEGER
Rule 102   any_type -> TYPE_STRING
Rule 103   any_type -> TYPE_BOOLEAN

Terminals, with rules where they appear

BR_LCIR              : 14 15 16 17 18 19 36 60 75 76 77 78 83
BR_LCSR              : 71 90
BR_LCUR              : 44
BR_RCIR              : 14 15 16 17 18 19 36 60 75 76 77 78 83
BR_RCSR              : 71 90
BR_RCUR              : 44
IDENTIFIER           : 17 20 21 22 37 57 58 58 71 72 73 82 86 87 88 90 98
KEYWORD_ELSE         : 14
KEYWORD_FOR          : 17
KEYWORD_FUNCTION     : 18 19
KEYWORD_IF           : 14 15
KEYWORD_IN           : 17
KEYWORD_PRINT        : 75
KEYWORD_RETURN       : 76
KEYWORD_VECTOR       : 77
KEYWORD_VECTOR_CONSTRUCTOR : 78
KEYWORD_WHILE        : 16
OP_ASGN              : 71 72 73
OP_BITAND            : 63
OP_BITNOT            : 56
OP_BITOR             : 64
OP_COMP              : 70
OP_DIVIDE            : 94
OP_EXPO              : 95
OP_FUNC_ASGN         : 18 19
OP_GREAT             : 65
OP_GREQ              : 68
OP_LEEQ              : 67
OP_LESS              : 66
OP_LOGAND            : 61
OP_LOGOR             : 62
OP_MINUS             : 92
OP_MULT              : 93
OP_NOEQ              : 69
OP_PLUS              : 91
OP_REMDR             : 96
SEP_COLON            : 97
SEP_COMMA            : 21 39 77 79
TYPE_BOOLEAN         : 52 103
TYPE_INTEGER         : 77 79 80 99 101
TYPE_NUMERIC         : 100
TYPE_STRING          : 102
error                : 

Nonterminals, with rules where they appear

M_1                  : 14 15
M_10                 : 18
M_11                 : 18
M_12                 : 19
M_13                 : 19
M_14                 : 36
M_15                 : 39 40
M_16                 : 73
M_2                  : 14
M_3                  : 14 15
M_4                  : 16
M_5                  : 16
M_6                  : 16
M_7                  : 17
M_8                  : 17
M_9                  : 21 22
any_type             : 57 59 59 84 85 89
arg                  : 39 40
arg_list             : 18 21
arg_to_pass          : 36 39
bitop                : 55 84 86
comparison_statement : 53 54 55
compop               : 57 58 59
compound_statement   : 14 14 15 16 17 18 19
conditional_statements : 5
expression           : 7 47
expression_statements : 2
fname                : 18 19
fname2               : 36
for_loop             : 9 48
for_range            : 17
for_range_variables  : 97 97
function_call        : 11
function_definition  : 10
functions_statements : 4
if_cond              : 14 15 16 54 55 56 60
if_else_statement    : 12 51
if_statement         : 13 50
logop                : 54 85 87
loop_statements      : 3
math                 : 81 82
program              : 0
rightside            : 42 71 71 72 75 76 81 81 82 83 84 85 86 87 90
start                : 1 7 8 9 10 11 12 13
statement            : 45 46
statement_list       : 44 45
vector_definition    : 73
vector_elements      : 78 79
while_loop           : 8 49

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . start
    (2) start -> . expression_statements
    (3) start -> . loop_statements
    (4) start -> . functions_statements
    (5) start -> . conditional_statements
    (6) start -> .
    (7) expression_statements -> . expression start
    (8) loop_statements -> . while_loop start
    (9) loop_statements -> . for_loop start
    (10) functions_statements -> . function_definition start
    (11) functions_statements -> . function_call start
    (12) conditional_statements -> . if_else_statement start
    (13) conditional_statements -> . if_statement start
    (71) expression -> . IDENTIFIER BR_LCSR rightside BR_RCSR OP_ASGN rightside
    (72) expression -> . IDENTIFIER OP_ASGN rightside
    (73) expression -> . IDENTIFIER OP_ASGN vector_definition M_16
    (75) expression -> . KEYWORD_PRINT BR_LCIR rightside BR_RCIR
    (76) expression -> . KEYWORD_RETURN BR_LCIR rightside BR_RCIR
    (16) while_loop -> . KEYWORD_WHILE BR_LCIR M_4 if_cond BR_RCIR M_5 compound_statement M_6
    (17) for_loop -> . KEYWORD_FOR BR_LCIR IDENTIFIER KEYWORD_IN for_range BR_RCIR M_7 compound_statement M_8
    (18) function_definition -> . fname OP_FUNC_ASGN KEYWORD_FUNCTION BR_LCIR arg_list M_10 BR_RCIR compound_statement M_11
    (19) function_definition -> . fname OP_FUNC_ASGN KEYWORD_FUNCTION BR_LCIR BR_RCIR M_12 compound_statement M_13
    (36) function_call -> . fname2 BR_LCIR arg_to_pass BR_RCIR M_14
    (14) if_else_statement -> . KEYWORD_IF BR_LCIR if_cond BR_RCIR M_1 compound_statement KEYWORD_ELSE M_2 compound_statement M_3
    (15) if_statement -> . KEYWORD_IF BR_LCIR if_cond BR_RCIR M_1 compound_statement M_3
    (20) fname -> . IDENTIFIER
    (37) fname2 -> . IDENTIFIER

    $end            reduce using rule 6 (start -> .)
    IDENTIFIER      shift and go to state 7
    KEYWORD_PRINT   shift and go to state 21
    KEYWORD_RETURN  shift and go to state 2
    KEYWORD_WHILE   shift and go to state 9
    KEYWORD_FOR     shift and go to state 19
    KEYWORD_IF      shift and go to state 14

    function_call                  shift and go to state 1
    if_else_statement              shift and go to state 3
    start                          shift and go to state 4
    program                        shift and go to state 5
    fname                          shift and go to state 6
    if_statement                   shift and go to state 8
    for_loop                       shift and go to state 10
    while_loop                     shift and go to state 11
    conditional_statements         shift and go to state 12
    expression_statements          shift and go to state 13
    function_definition            shift and go to state 15
    loop_statements                shift and go to state 16
    fname2                         shift and go to state 18
    functions_statements           shift and go to state 20
    expression                     shift and go to state 17

state 1

    (11) functions_statements -> function_call . start
    (2) start -> . expression_statements
    (3) start -> . loop_statements
    (4) start -> . functions_statements
    (5) start -> . conditional_statements
    (6) start -> .
    (7) expression_statements -> . expression start
    (8) loop_statements -> . while_loop start
    (9) loop_statements -> . for_loop start
    (10) functions_statements -> . function_definition start
    (11) functions_statements -> . function_call start
    (12) conditional_statements -> . if_else_statement start
    (13) conditional_statements -> . if_statement start
    (71) expression -> . IDENTIFIER BR_LCSR rightside BR_RCSR OP_ASGN rightside
    (72) expression -> . IDENTIFIER OP_ASGN rightside
    (73) expression -> . IDENTIFIER OP_ASGN vector_definition M_16
    (75) expression -> . KEYWORD_PRINT BR_LCIR rightside BR_RCIR
    (76) expression -> . KEYWORD_RETURN BR_LCIR rightside BR_RCIR
    (16) while_loop -> . KEYWORD_WHILE BR_LCIR M_4 if_cond BR_RCIR M_5 compound_statement M_6
    (17) for_loop -> . KEYWORD_FOR BR_LCIR IDENTIFIER KEYWORD_IN for_range BR_RCIR M_7 compound_statement M_8
    (18) function_definition -> . fname OP_FUNC_ASGN KEYWORD_FUNCTION BR_LCIR arg_list M_10 BR_RCIR compound_statement M_11
    (19) function_definition -> . fname OP_FUNC_ASGN KEYWORD_FUNCTION BR_LCIR BR_RCIR M_12 compound_statement M_13
    (36) function_call -> . fname2 BR_LCIR arg_to_pass BR_RCIR M_14
    (14) if_else_statement -> . KEYWORD_IF BR_LCIR if_cond BR_RCIR M_1 compound_statement KEYWORD_ELSE M_2 compound_statement M_3
    (15) if_statement -> . KEYWORD_IF BR_LCIR if_cond BR_RCIR M_1 compound_statement M_3
    (20) fname -> . IDENTIFIER
    (37) fname2 -> . IDENTIFIER

    $end            reduce using rule 6 (start -> .)
    IDENTIFIER      shift and go to state 7
    KEYWORD_PRINT   shift and go to state 21
    KEYWORD_RETURN  shift and go to state 2
    KEYWORD_WHILE   shift and go to state 9
    KEYWORD_FOR     shift and go to state 19
    KEYWORD_IF      shift and go to state 14

    function_call                  shift and go to state 1
    if_else_statement              shift and go to state 3
    start                          shift and go to state 22
    fname                          shift and go to state 6
    if_statement                   shift and go to state 8
    for_loop                       shift and go to state 10
    while_loop                     shift and go to state 11
    conditional_statements         shift and go to state 12
    expression_statements          shift and go to state 13
    function_definition            shift and go to state 15
    loop_statements                shift and go to state 16
    fname2                         shift and go to state 18
    functions_statements           shift and go to state 20
    expression                     shift and go to state 17

state 2

    (76) expression -> KEYWORD_RETURN . BR_LCIR rightside BR_RCIR

    BR_LCIR         shift and go to state 23


state 3

    (12) conditional_statements -> if_else_statement . start
    (2) start -> . expression_statements
    (3) start -> . loop_statements
    (4) start -> . functions_statements
    (5) start -> . conditional_statements
    (6) start -> .
    (7) expression_statements -> . expression start
    (8) loop_statements -> . while_loop start
    (9) loop_statements -> . for_loop start
    (10) functions_statements -> . function_definition start
    (11) functions_statements -> . function_call start
    (12) conditional_statements -> . if_else_statement start
    (13) conditional_statements -> . if_statement start
    (71) expression -> . IDENTIFIER BR_LCSR rightside BR_RCSR OP_ASGN rightside
    (72) expression -> . IDENTIFIER OP_ASGN rightside
    (73) expression -> . IDENTIFIER OP_ASGN vector_definition M_16
    (75) expression -> . KEYWORD_PRINT BR_LCIR rightside BR_RCIR
    (76) expression -> . KEYWORD_RETURN BR_LCIR rightside BR_RCIR
    (16) while_loop -> . KEYWORD_WHILE BR_LCIR M_4 if_cond BR_RCIR M_5 compound_statement M_6
    (17) for_loop -> . KEYWORD_FOR BR_LCIR IDENTIFIER KEYWORD_IN for_range BR_RCIR M_7 compound_statement M_8
    (18) function_definition -> . fname OP_FUNC_ASGN KEYWORD_FUNCTION BR_LCIR arg_list M_10 BR_RCIR compound_statement M_11
    (19) function_definition -> . fname OP_FUNC_ASGN KEYWORD_FUNCTION BR_LCIR BR_RCIR M_12 compound_statement M_13
    (36) function_call -> . fname2 BR_LCIR arg_to_pass BR_RCIR M_14
    (14) if_else_statement -> . KEYWORD_IF BR_LCIR if_cond BR_RCIR M_1 compound_statement KEYWORD_ELSE M_2 compound_statement M_3
    (15) if_statement -> . KEYWORD_IF BR_LCIR if_cond BR_RCIR M_1 compound_statement M_3
    (20) fname -> . IDENTIFIER
    (37) fname2 -> . IDENTIFIER

    $end            reduce using rule 6 (start -> .)
    IDENTIFIER      shift and go to state 7
    KEYWORD_PRINT   shift and go to state 21
    KEYWORD_RETURN  shift and go to state 2
    KEYWORD_WHILE   shift and go to state 9
    KEYWORD_FOR     shift and go to state 19
    KEYWORD_IF      shift and go to state 14

    function_call                  shift and go to state 1
    if_else_statement              shift and go to state 3
    start                          shift and go to state 24
    fname                          shift and go to state 6
    if_statement                   shift and go to state 8
    for_loop                       shift and go to state 10
    while_loop                     shift and go to state 11
    conditional_statements         shift and go to state 12
    expression_statements          shift and go to state 13
    function_definition            shift and go to state 15
    loop_statements                shift and go to state 16
    fname2                         shift and go to state 18
    functions_statements           shift and go to state 20
    expression                     shift and go to state 17

state 4

    (1) program -> start .

    $end            reduce using rule 1 (program -> start .)


state 5

    (0) S' -> program .



state 6

    (18) function_definition -> fname . OP_FUNC_ASGN KEYWORD_FUNCTION BR_LCIR arg_list M_10 BR_RCIR compound_statement M_11
    (19) function_definition -> fname . OP_FUNC_ASGN KEYWORD_FUNCTION BR_LCIR BR_RCIR M_12 compound_statement M_13

    OP_FUNC_ASGN    shift and go to state 25


state 7

    (71) expression -> IDENTIFIER . BR_LCSR rightside BR_RCSR OP_ASGN rightside
    (72) expression -> IDENTIFIER . OP_ASGN rightside
    (73) expression -> IDENTIFIER . OP_ASGN vector_definition M_16
    (20) fname -> IDENTIFIER .
    (37) fname2 -> IDENTIFIER .

    BR_LCSR         shift and go to state 27
    OP_ASGN         shift and go to state 26
    OP_FUNC_ASGN    reduce using rule 20 (fname -> IDENTIFIER .)
    BR_LCIR         reduce using rule 37 (fname2 -> IDENTIFIER .)


state 8

    (13) conditional_statements -> if_statement . start
    (2) start -> . expression_statements
    (3) start -> . loop_statements
    (4) start -> . functions_statements
    (5) start -> . conditional_statements
    (6) start -> .
    (7) expression_statements -> . expression start
    (8) loop_statements -> . while_loop start
    (9) loop_statements -> . for_loop start
    (10) functions_statements -> . function_definition start
    (11) functions_statements -> . function_call start
    (12) conditional_statements -> . if_else_statement start
    (13) conditional_statements -> . if_statement start
    (71) expression -> . IDENTIFIER BR_LCSR rightside BR_RCSR OP_ASGN rightside
    (72) expression -> . IDENTIFIER OP_ASGN rightside
    (73) expression -> . IDENTIFIER OP_ASGN vector_definition M_16
    (75) expression -> . KEYWORD_PRINT BR_LCIR rightside BR_RCIR
    (76) expression -> . KEYWORD_RETURN BR_LCIR rightside BR_RCIR
    (16) while_loop -> . KEYWORD_WHILE BR_LCIR M_4 if_cond BR_RCIR M_5 compound_statement M_6
    (17) for_loop -> . KEYWORD_FOR BR_LCIR IDENTIFIER KEYWORD_IN for_range BR_RCIR M_7 compound_statement M_8
    (18) function_definition -> . fname OP_FUNC_ASGN KEYWORD_FUNCTION BR_LCIR arg_list M_10 BR_RCIR compound_statement M_11
    (19) function_definition -> . fname OP_FUNC_ASGN KEYWORD_FUNCTION BR_LCIR BR_RCIR M_12 compound_statement M_13
    (36) function_call -> . fname2 BR_LCIR arg_to_pass BR_RCIR M_14
    (14) if_else_statement -> . KEYWORD_IF BR_LCIR if_cond BR_RCIR M_1 compound_statement KEYWORD_ELSE M_2 compound_statement M_3
    (15) if_statement -> . KEYWORD_IF BR_LCIR if_cond BR_RCIR M_1 compound_statement M_3
    (20) fname -> . IDENTIFIER
    (37) fname2 -> . IDENTIFIER

    $end            reduce using rule 6 (start -> .)
    IDENTIFIER      shift and go to state 7
    KEYWORD_PRINT   shift and go to state 21
    KEYWORD_RETURN  shift and go to state 2
    KEYWORD_WHILE   shift and go to state 9
    KEYWORD_FOR     shift and go to state 19
    KEYWORD_IF      shift and go to state 14

    function_call                  shift and go to state 1
    if_else_statement              shift and go to state 3
    start                          shift and go to state 28
    fname                          shift and go to state 6
    if_statement                   shift and go to state 8
    for_loop                       shift and go to state 10
    while_loop                     shift and go to state 11
    conditional_statements         shift and go to state 12
    expression_statements          shift and go to state 13
    function_definition            shift and go to state 15
    loop_statements                shift and go to state 16
    fname2                         shift and go to state 18
    functions_statements           shift and go to state 20
    expression                     shift and go to state 17

state 9

    (16) while_loop -> KEYWORD_WHILE . BR_LCIR M_4 if_cond BR_RCIR M_5 compound_statement M_6

    BR_LCIR         shift and go to state 29


state 10

    (9) loop_statements -> for_loop . start
    (2) start -> . expression_statements
    (3) start -> . loop_statements
    (4) start -> . functions_statements
    (5) start -> . conditional_statements
    (6) start -> .
    (7) expression_statements -> . expression start
    (8) loop_statements -> . while_loop start
    (9) loop_statements -> . for_loop start
    (10) functions_statements -> . function_definition start
    (11) functions_statements -> . function_call start
    (12) conditional_statements -> . if_else_statement start
    (13) conditional_statements -> . if_statement start
    (71) expression -> . IDENTIFIER BR_LCSR rightside BR_RCSR OP_ASGN rightside
    (72) expression -> . IDENTIFIER OP_ASGN rightside
    (73) expression -> . IDENTIFIER OP_ASGN vector_definition M_16
    (75) expression -> . KEYWORD_PRINT BR_LCIR rightside BR_RCIR
    (76) expression -> . KEYWORD_RETURN BR_LCIR rightside BR_RCIR
    (16) while_loop -> . KEYWORD_WHILE BR_LCIR M_4 if_cond BR_RCIR M_5 compound_statement M_6
    (17) for_loop -> . KEYWORD_FOR BR_LCIR IDENTIFIER KEYWORD_IN for_range BR_RCIR M_7 compound_statement M_8
    (18) function_definition -> . fname OP_FUNC_ASGN KEYWORD_FUNCTION BR_LCIR arg_list M_10 BR_RCIR compound_statement M_11
    (19) function_definition -> . fname OP_FUNC_ASGN KEYWORD_FUNCTION BR_LCIR BR_RCIR M_12 compound_statement M_13
    (36) function_call -> . fname2 BR_LCIR arg_to_pass BR_RCIR M_14
    (14) if_else_statement -> . KEYWORD_IF BR_LCIR if_cond BR_RCIR M_1 compound_statement KEYWORD_ELSE M_2 compound_statement M_3
    (15) if_statement -> . KEYWORD_IF BR_LCIR if_cond BR_RCIR M_1 compound_statement M_3
    (20) fname -> . IDENTIFIER
    (37) fname2 -> . IDENTIFIER

    $end            reduce using rule 6 (start -> .)
    IDENTIFIER      shift and go to state 7
    KEYWORD_PRINT   shift and go to state 21
    KEYWORD_RETURN  shift and go to state 2
    KEYWORD_WHILE   shift and go to state 9
    KEYWORD_FOR     shift and go to state 19
    KEYWORD_IF      shift and go to state 14

    function_call                  shift and go to state 1
    if_else_statement              shift and go to state 3
    start                          shift and go to state 30
    fname                          shift and go to state 6
    if_statement                   shift and go to state 8
    for_loop                       shift and go to state 10
    while_loop                     shift and go to state 11
    conditional_statements         shift and go to state 12
    expression_statements          shift and go to state 13
    function_definition            shift and go to state 15
    loop_statements                shift and go to state 16
    fname2                         shift and go to state 18
    functions_statements           shift and go to state 20
    expression                     shift and go to state 17

state 11

    (8) loop_statements -> while_loop . start
    (2) start -> . expression_statements
    (3) start -> . loop_statements
    (4) start -> . functions_statements
    (5) start -> . conditional_statements
    (6) start -> .
    (7) expression_statements -> . expression start
    (8) loop_statements -> . while_loop start
    (9) loop_statements -> . for_loop start
    (10) functions_statements -> . function_definition start
    (11) functions_statements -> . function_call start
    (12) conditional_statements -> . if_else_statement start
    (13) conditional_statements -> . if_statement start
    (71) expression -> . IDENTIFIER BR_LCSR rightside BR_RCSR OP_ASGN rightside
    (72) expression -> . IDENTIFIER OP_ASGN rightside
    (73) expression -> . IDENTIFIER OP_ASGN vector_definition M_16
    (75) expression -> . KEYWORD_PRINT BR_LCIR rightside BR_RCIR
    (76) expression -> . KEYWORD_RETURN BR_LCIR rightside BR_RCIR
    (16) while_loop -> . KEYWORD_WHILE BR_LCIR M_4 if_cond BR_RCIR M_5 compound_statement M_6
    (17) for_loop -> . KEYWORD_FOR BR_LCIR IDENTIFIER KEYWORD_IN for_range BR_RCIR M_7 compound_statement M_8
    (18) function_definition -> . fname OP_FUNC_ASGN KEYWORD_FUNCTION BR_LCIR arg_list M_10 BR_RCIR compound_statement M_11
    (19) function_definition -> . fname OP_FUNC_ASGN KEYWORD_FUNCTION BR_LCIR BR_RCIR M_12 compound_statement M_13
    (36) function_call -> . fname2 BR_LCIR arg_to_pass BR_RCIR M_14
    (14) if_else_statement -> . KEYWORD_IF BR_LCIR if_cond BR_RCIR M_1 compound_statement KEYWORD_ELSE M_2 compound_statement M_3
    (15) if_statement -> . KEYWORD_IF BR_LCIR if_cond BR_RCIR M_1 compound_statement M_3
    (20) fname -> . IDENTIFIER
    (37) fname2 -> . IDENTIFIER

    $end            reduce using rule 6 (start -> .)
    IDENTIFIER      shift and go to state 7
    KEYWORD_PRINT   shift and go to state 21
    KEYWORD_RETURN  shift and go to state 2
    KEYWORD_WHILE   shift and go to state 9
    KEYWORD_FOR     shift and go to state 19
    KEYWORD_IF      shift and go to state 14

    function_call                  shift and go to state 1
    if_else_statement              shift and go to state 3
    start                          shift and go to state 31
    fname                          shift and go to state 6
    if_statement                   shift and go to state 8
    for_loop                       shift and go to state 10
    while_loop                     shift and go to state 11
    conditional_statements         shift and go to state 12
    expression_statements          shift and go to state 13
    function_definition            shift and go to state 15
    loop_statements                shift and go to state 16
    fname2                         shift and go to state 18
    functions_statements           shift and go to state 20
    expression                     shift and go to state 17

state 12

    (5) start -> conditional_statements .

    $end            reduce using rule 5 (start -> conditional_statements .)


state 13

    (2) start -> expression_statements .

    $end            reduce using rule 2 (start -> expression_statements .)


state 14

    (14) if_else_statement -> KEYWORD_IF . BR_LCIR if_cond BR_RCIR M_1 compound_statement KEYWORD_ELSE M_2 compound_statement M_3
    (15) if_statement -> KEYWORD_IF . BR_LCIR if_cond BR_RCIR M_1 compound_statement M_3

    BR_LCIR         shift and go to state 32


state 15

    (10) functions_statements -> function_definition . start
    (2) start -> . expression_statements
    (3) start -> . loop_statements
    (4) start -> . functions_statements
    (5) start -> . conditional_statements
    (6) start -> .
    (7) expression_statements -> . expression start
    (8) loop_statements -> . while_loop start
    (9) loop_statements -> . for_loop start
    (10) functions_statements -> . function_definition start
    (11) functions_statements -> . function_call start
    (12) conditional_statements -> . if_else_statement start
    (13) conditional_statements -> . if_statement start
    (71) expression -> . IDENTIFIER BR_LCSR rightside BR_RCSR OP_ASGN rightside
    (72) expression -> . IDENTIFIER OP_ASGN rightside
    (73) expression -> . IDENTIFIER OP_ASGN vector_definition M_16
    (75) expression -> . KEYWORD_PRINT BR_LCIR rightside BR_RCIR
    (76) expression -> . KEYWORD_RETURN BR_LCIR rightside BR_RCIR
    (16) while_loop -> . KEYWORD_WHILE BR_LCIR M_4 if_cond BR_RCIR M_5 compound_statement M_6
    (17) for_loop -> . KEYWORD_FOR BR_LCIR IDENTIFIER KEYWORD_IN for_range BR_RCIR M_7 compound_statement M_8
    (18) function_definition -> . fname OP_FUNC_ASGN KEYWORD_FUNCTION BR_LCIR arg_list M_10 BR_RCIR compound_statement M_11
    (19) function_definition -> . fname OP_FUNC_ASGN KEYWORD_FUNCTION BR_LCIR BR_RCIR M_12 compound_statement M_13
    (36) function_call -> . fname2 BR_LCIR arg_to_pass BR_RCIR M_14
    (14) if_else_statement -> . KEYWORD_IF BR_LCIR if_cond BR_RCIR M_1 compound_statement KEYWORD_ELSE M_2 compound_statement M_3
    (15) if_statement -> . KEYWORD_IF BR_LCIR if_cond BR_RCIR M_1 compound_statement M_3
    (20) fname -> . IDENTIFIER
    (37) fname2 -> . IDENTIFIER

    $end            reduce using rule 6 (start -> .)
    IDENTIFIER      shift and go to state 7
    KEYWORD_PRINT   shift and go to state 21
    KEYWORD_RETURN  shift and go to state 2
    KEYWORD_WHILE   shift and go to state 9
    KEYWORD_FOR     shift and go to state 19
    KEYWORD_IF      shift and go to state 14

    function_call                  shift and go to state 1
    if_else_statement              shift and go to state 3
    start                          shift and go to state 33
    fname                          shift and go to state 6
    if_statement                   shift and go to state 8
    for_loop                       shift and go to state 10
    while_loop                     shift and go to state 11
    conditional_statements         shift and go to state 12
    expression_statements          shift and go to state 13
    function_definition            shift and go to state 15
    loop_statements                shift and go to state 16
    fname2                         shift and go to state 18
    functions_statements           shift and go to state 20
    expression                     shift and go to state 17

state 16

    (3) start -> loop_statements .

    $end            reduce using rule 3 (start -> loop_statements .)


state 17

    (7) expression_statements -> expression . start
    (2) start -> . expression_statements
    (3) start -> . loop_statements
    (4) start -> . functions_statements
    (5) start -> . conditional_statements
    (6) start -> .
    (7) expression_statements -> . expression start
    (8) loop_statements -> . while_loop start
    (9) loop_statements -> . for_loop start
    (10) functions_statements -> . function_definition start
    (11) functions_statements -> . function_call start
    (12) conditional_statements -> . if_else_statement start
    (13) conditional_statements -> . if_statement start
    (71) expression -> . IDENTIFIER BR_LCSR rightside BR_RCSR OP_ASGN rightside
    (72) expression -> . IDENTIFIER OP_ASGN rightside
    (73) expression -> . IDENTIFIER OP_ASGN vector_definition M_16
    (75) expression -> . KEYWORD_PRINT BR_LCIR rightside BR_RCIR
    (76) expression -> . KEYWORD_RETURN BR_LCIR rightside BR_RCIR
    (16) while_loop -> . KEYWORD_WHILE BR_LCIR M_4 if_cond BR_RCIR M_5 compound_statement M_6
    (17) for_loop -> . KEYWORD_FOR BR_LCIR IDENTIFIER KEYWORD_IN for_range BR_RCIR M_7 compound_statement M_8
    (18) function_definition -> . fname OP_FUNC_ASGN KEYWORD_FUNCTION BR_LCIR arg_list M_10 BR_RCIR compound_statement M_11
    (19) function_definition -> . fname OP_FUNC_ASGN KEYWORD_FUNCTION BR_LCIR BR_RCIR M_12 compound_statement M_13
    (36) function_call -> . fname2 BR_LCIR arg_to_pass BR_RCIR M_14
    (14) if_else_statement -> . KEYWORD_IF BR_LCIR if_cond BR_RCIR M_1 compound_statement KEYWORD_ELSE M_2 compound_statement M_3
    (15) if_statement -> . KEYWORD_IF BR_LCIR if_cond BR_RCIR M_1 compound_statement M_3
    (20) fname -> . IDENTIFIER
    (37) fname2 -> . IDENTIFIER

    $end            reduce using rule 6 (start -> .)
    IDENTIFIER      shift and go to state 7
    KEYWORD_PRINT   shift and go to state 21
    KEYWORD_RETURN  shift and go to state 2
    KEYWORD_WHILE   shift and go to state 9
    KEYWORD_FOR     shift and go to state 19
    KEYWORD_IF      shift and go to state 14
